# funlab

./: LICENSE.md  Makefile.in  Makefile.mk.in  README  README.md  configure.ac  formulas.fun  funlab.lsm.in  funlab.spec.in  funlabrc
debian/: changelog  control  dirs  menu  postinst  preinst  prerm
doc/: COPYRIGHT  INSTALL  READ.ME.FIRST.OR.DIE  README
res/: funlab.glade  funlab.gladep  funlab.ui  funlab.xpm  funlab.xrc
src/: cli_options.c  cli_options.cxx  cli_options.h  events.cxx  events.h  events.hxx  funlab.1  funlab.texinfo  gl.c  gl.cxx  gl.h  gui.c.gtkmm  gui.c.wxwidgets  gui.cxx  gui.cxx.gtkmm  gui.cxx.wxwidgets  gui.h  gui.hxx  hdetachedrenderer.cxx  hdetachedrenderer.h  hdetachedrenderer.hxx  header  hembeddedrenderer.cxx  hembeddedrenderer.h  hembeddedrenderer.hxx  heventlistener.hxx  hfunlab.cxx  hfunlab.h  hfunlab.hxx  hrenderer.cxx  hrenderer.h  hrenderer.hxx  hsurface.cxx  hsurface.h  main.c  main.cxx  oplotdesc.cxx  oplotdesc.hxx  options.cxx  options.hxx  (+9 more)
